--- a/src/main/resources/templates/contribuyentes.html
+++ b/src/main/resources/templates/contribuyentes.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Lista de Contribuyentes</title>
 </head>
 <body>
 
+<table>
+    <thead>
+    <th>Nombre</th>
+    <th>Apellido</th>
+    <th>NIT</th>
+    <th>Importancia</th>
+    <th>Fecha</th>
+    </thead>
 
+    <th:block th:each="c, row:${contribuyentes}">
+        <tr>
+            <th th:text="${c.s_nombre}" />
+            <th th:text="${c.s_apellido}"/>
+            <th th:text="${c.s_nit}"/>
+            <th th:text="${c.importancia.s_importancia}"/>
+            <th th:text="${#dates.format(c.f_fecha_ingreso,'dd-MMM-yyyy')}"/>
+        </tr>
+    </th:block>
+</table>
+
+<a type="buton" href="main.html" >Volver al formulario</a>
 
 </body>
 </html>
