--- a/src/main/resources/templates/exito.html
+++ b/src/main/resources/templates/exito.html
@@ -7,7 +7,7 @@
 <body>
 
 <h1>Contribuyente Guardado con Exito</h1>
-<input type="button" value="Regresar" href="/main">
+<a type="button" value="Regresar" href="main.html"/>
 
 </body>
 </html>
